# ad_portfolio

./: README.md
1-mental-health-in-IT/: LICENSE.txt  README.md  requirements.txt
1-mental-health-in-IT/dataset/: mental_health.csv  question_list.csv
2-AB-testing/: README.md  requirements.txt
2-AB-testing/Cookie_Cats/: README.md  cookie_cats.ipynb
2-AB-testing/Fast_Food_Promo/: README.md
3-wine-quality-model/: README.md  red_wine_quality_model.ipynb
4-travel-insurance-model/: README.md  pyproject.toml  travel_insurance.ipynb
4-travel-insurance-model/helpers/: m3s1_helpers.py
M2S3/: README.md  red_wine_quality_model.ipynb
M2S3/helpers/: any_outliers_iqr.py  fig_px_render.py  fig_update.py  m2s3_helpers.py
M2S3/helpers/.ipynb_checkpoints/: any_outliers_iqr-checkpoint.py  fig_px_render-checkpoint.py  fig_update-checkpoint.py
Red_Wine_Explanatory_Model/: red_wine_quality_model.ipynb  requirements.txt
wine-quality-model/: README.md  pyproject.toml
